LendersApp/src/objects/Underwriter_Assignment_Rule_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Underwriter_Assignment_Rule__c</fullName>
        <label>Underwriter Assignment Rule</label>
        <referenceTo>Underwriter_Assignment_Rule__c</referenceTo>
        <relationshipLabel>Underwriter Assignment Rule Entries</relationshipLabel>
        <relationshipName>Underwriter_Assignment_Rule_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Underwriter Assignment Rule Entry</label>
    <nameField>
        <displayFormat>UAE-{000000}</displayFormat>
        <label>Underwriter Assignment Rule Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underwriter Assignment Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>